Changes in 23.2
===============
	* misc: Command names increased from 16 to 64 characters
	* buildsys: signals.c depends on signames.h !16
	* killall: look at all namespaces by default
	* killall: Fix -INT option parsing #11
	* killall: change to getopt_long without _only #12
	* peekfd: Attach to all threads option !15
	* pslog: Define PATH_MAX if required Debian:#905797

Changes in 23.1
===============
	* killall: Remove debug output Debian: #864753
	* docs: distribute pslog.1
	* docs: distribute README.md Debian: #864752
Changes in 23.0
===============
	* killall: Fix process age race condition !11 Debian #822861
	* killall: only use scope of current namespace by default
	* killall: better parsing of command names
	* pstree: add cgroup namespaces !10
	* peekfd: Help give long options too !5
	* killall: correctly report when 32+ procs match !8
	* prtat: Remove duplicate options in man page !3 Debian #846387
	* pslog: New program to check what logs are open merge !1
	* fuser: increase path length for octal escaping SF [#37]
	* Make usage of linked lists of devices found in
	  /proc/self/mountinfo optional
	* Make timeout() in timeout.c work with shared mmap to
	  reduce the load due write/read the stat buffers
	* Add list_sort() to lists.h to be able to sort lists
	* fuser: Fixed typo for  -M flag. Debian #740275
	* pstree: by default doesn't show threadnames, use -t to show
	  as it disables compaction. SF [#33] Debian #815902
	* pstree: Removed need for PATH_MAX Debian #750405
	* pstree: ignores disappeared processes. SF [#34]
	* killall: -o and -y work with -r flags. SF [#64]
	* m4/gettext.m4: Upgrade to gettext-0.19.4.
	* m4/iconv.m4: Upgrade to gettext-0.19.4.
	* m4/lib-ld.m4: Upgrade to gettext-0.19.4.
	* m4/lib-link.m4: Upgrade to gettext-0.19.4.
	* m4/lib-prefix.m4: Upgrade to gettext-0.19.4.
	* m4/nls.m4: Upgrade to gettext-0.19.4.
	* m4/po.m4: Upgrade to gettext-0.19.4.
	* m4/progtest.m4: Upgrade to gettext-0.19.4.